tests/paczka1/fuzzy1/43006196.err
Error in line 3: 8mcIgE A556 55,3
Error in line 9: rWEhl5jVKC7 A232 52,0
Error in line 13: tF7cHxBb S939 86,7
Error in line 23: INN0kj S939 4u8
Error in line 20: tF7cHxBb S939 42,8
Error in line 28: lzegZ A556 67,2
